--- a/butskri-base/pom.xml
+++ b/butskri-base/pom.xml
@@ -10,6 +10,8 @@
     <name>butskri-base</name>
 	<description />
 	<properties>
+		<junit.version>4.8.1</junit.version>
+		<mockito.version>1.3</mockito.version>
 		<spring.version>3.1.1.RELEASE</spring.version>
 	</properties>
 	<dependencyManagement>
@@ -17,12 +19,12 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.8.1</version>
+				<version>${junit.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.3</version>
+				<version>${mockito.version}</version>
 			</dependency>
 			
 			<!-- SPRING DEPENDENCIES -->
